Added feature extraction and parallel S3 upload.

--- a/collector.cfg.example
+++ b/collector.cfg.example
@@ -8,4 +8,8 @@ consumer_secret = TWITTER_CONSUMER_SECRET
 outfile = /tmp/twitter_archive
 target_count = 10000
 tracker_string = #interesting,#tweets
-
+delete_after_upload = True
+access_key = S3_ACCESS_KEY
+secret_access_key = S3_SECRET_ACCESS_KEY
+endpoint_url = https://s3.us-west-000.backblazeb2.com
+follow_file = follow.txt
